Center and extend nav across page, spacing fixes

--- a/style1.css
+++ b/style1.css
@@ -5,17 +5,29 @@ font-family: 'Arial', sans-serif;
 font-family: 'Source Sans Pro', Arial, sans-serif;
 */
 
+.container {
+	width: 100%;
+	margin: 0 auto;
+	overflow: hidden;
+}
+
 nav {  
 	font-family: 'Arial', sans-serif;
 	font-size: 1em;
 	width: 100%;
 	height: 2.1em;
 	background-color: #323131;
-	padding-left: 2.5em;
 }  
+
+#navbar-container {
+	float: left;
+	width: 100%;
+	text-align: center;
+}
 
 nav ul {
 	padding-top: .25em;
+	display: inline-block;
 }
 
 nav ul li {
@@ -29,16 +41,18 @@ nav ul li a {
 	color: white;
 	text-decoration: none;
 	overflow: hidden;
-	padding-top: .2em;
-	padding-right: 1em;
+	padding: .15em 1em 0 1em;
 	vertical-align: middle;
 	font-weight: 200;
 } 
 
-nav ul li a:hover,
-nav ul li a:active { 
+nav ul li a:hover { 
 	color: silver;
 }  
+
+#navbar-container #onpage {
+	color: silver;
+}
 
 body {
 	margin: 0;
@@ -93,7 +107,7 @@ p, ul {
 	font-size: 1em;
 }
 
-ul {
+ul.bullet {
 	padding-left: 1em;
 	padding-top: .2em;
 	padding-bottom: .2em;
