--- a/style3.css
+++ b/style3.css
@@ -5,8 +5,14 @@ font-family: 'Arial', sans-serif;
 font-family: 'Kalam', serif;
 */
 
-body.nap {
+.container {
 	width: 1280px;
+	margin: 0 auto;
+	overflow: hidden;
+}
+
+body.nap {
+	
 	background: #F7F5F0;
 	min-width: 620px;
 	margin: 0;
@@ -24,17 +30,24 @@ nav {
 	width: 100%;
 	height: 2.1em;
 	background-color: #323131;
-	padding-left: 3.5em;
 }  
+
+#navbar-container {
+	float: left;
+	width: 100%;
+	text-align: center;
+}
 
 nav ul {
 	padding-top: .25em;
+	display: inline-block;
 }
 
 nav ul li {
 	margin: 0;
 	float: left;
 }
+
 nav ul li a {
 	text-align: center;
 	display: block;
@@ -42,16 +55,18 @@ nav ul li a {
 	color: white;
 	text-decoration: none;
 	overflow: hidden;
-	padding-top: .1em;
-	padding-right: 1em;
+	padding: .1em 1em 0 1em;
 	vertical-align: middle;
 	font-weight: 200;
 } 
 
-nav ul li a:hover,
-nav ul li a:active { 
+nav ul li a:hover { 
 	color: silver;
 }  
+
+#navbar-container #onpage {
+	color: silver;
+}
 
 div#napa .section {
 	margin-left: 2em;
